--- a/about.html
+++ b/about.html
@@ -155,15 +155,15 @@
                                                 </div>
                                                 <div class="modal-body">
                                                     <p class="pl-1">Hello future Spartan!</p>
-                                                    <p>In the past few weeks, the executive board has been working hard to comply with the new regulations from the state and the university. As you may have heard, the university is now highly encouraging that registered student organizations conduct all activities remotely. Since your safety is our top priority, <b>we have made the difficult decision to cancel the in-person part of this program</b>. However, we would still like to provide some guidance and resources for the upcoming school year that you would've received in a normal circumstance.</p>
-                                                    <p>We are holding a <b>free Zoom webinar on August 26th at 12pm EST</b> to give incoming engineers advice from current students on topics including how to succeed at MSU, tips for online classes, and a Q&A session for each major. If you are interested in attending, please fill out the Google Form by clicking on the button below. We expect the event to be 2-3 hours long and we will communicate an updated agenda and a link to join as the event gets closer.</p>
-                                                    <p>Thank you for your understanding during these difficult times, if you have any questions or concerns feel free to email us at <a href="mailto: leadershipadvantagemsu@gmail.com">leadershipadvantagemsu@gmail.com</a>.</p>
-                                                    <p>We hope to see you (virtually) soon!</p>
+                                                    <p>This year we are hoping to run the program in person while being socially distant and abiding by all health and safety protocols laid out by Michigan State University, Ingham County, and the state of Michigan. We will be giving out refunds in case we are unable to hold it in person and we will try to set up a few virtual events before the start of the semester.</p>
+                                                    <p>Applications are due by <b>July 12th</b>, 2021, however applications are evaluated as they come in, so apply as soon as you can! The program costs will be at max $200 but likely will be less, as it includes early move in costs, all meals, and a t-shirt at the end of the program. All accepted participants will be contacted via email by <b>July 26th</b>. Move-in for the students will be <b>August 25th</b> with the program running to the <b>28th</b>. If you are interested in attending, please fill out the Google Form by clicking on the button below.</p>
+                                                    <p>If you have any questions or concerns feel free to email us at <a href="mailto: leadershipadvantagemsu@gmail.com">leadershipadvantagemsu@gmail.com</a>.</p>
+                                                    <p>We hope to see you soon!</p>
                                                     <p class="mb-0 pl-2">- Leadership Advantage Executive Board</p>
                                                 </div>
                                                 <div class="modal-footer">
                                                     <button type="button" class="btn btn-secondary mr-3" data-dismiss="modal">Close</button>
-                                                    <a class="btn btn-primary" role="button" href="https://forms.gle/XLWtvYrpxjnRkrDk7" target="_blank">Virtual Sign Up</a>
+                                                    <a class="btn btn-primary" role="button" href="https://forms.gle/mKA6XpezVhCq8hyw6" target="_blank">Sign Up Here</a>
                                                 </div>
                                             </div>
                                         </div>
