--- a/team.html
+++ b/team.html
@@ -159,14 +159,14 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/mikayla.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Mikayla Norton's Photo">
+                                    <img src="assets/img/team/katyf.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Katy Foss's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Mikayla Norton</h3>
+                                        <h3 class="text-primary">Katy Foss</h3>
                                         <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Howell, MI</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Tecumseh, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Internal President</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Applied Engineering Sciences</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2023</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Environmental Engineering</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2024</div>
                                     </div>
 
                                     <!-- <div class="border-top">
@@ -178,14 +178,14 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/akhil.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Connor Mears's Photo">
+                                    <img src="assets/img/team/anton.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Anton Samanic's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Akhil Tatineni</h3>
+                                        <h3 class="text-primary">Anton Samanic</h3>
                                         <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Troy, MI</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Mokena, IL</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>External President</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Computer Science</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2023</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Mechanical Engineering</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2025</div>
                                     </div>
 
                                     <!-- <div class="border-top">
@@ -216,14 +216,14 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/grant.JPG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Grant Wills's Photo">
+                                    <img src="assets/img/team/joshv.JPG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Joshua VanBynen's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Grant Wills</h3>
+                                        <h3 class="text-primary">Joshua VanBynen</h3>
                                         <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Troy, MI</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Pinckney, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Treasurer</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Finance</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>April 2023</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Computer Science</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2024</div>
                                     </div>
 
                                     <!-- <div class="border-top">
@@ -235,32 +235,13 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/aliza.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Aliza Opolka's Photo">
-                                    <div class="text-center mt-3">
-                                        <h3 class="text-primary">Aliza Opolka</h3>
-                                        <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Fowlerville, MI</div>
-                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>Caterer</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Mechanical Engineering</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2023</div>
-                                    </div>
-
-                                    <!-- <div class="border-top">
-                                        <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
-                                    </div> -->
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 mb-4">
-                            <div class="card shadow border-0 h-100">
-                                <div class="card-body">
-                                    <img src="assets/img/team/ethan.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Mikayla Norton's Photo">
+                                    <img src="assets/img/team/ethan.jpeg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Ethan Rylko's Photo">
                                     <div class="text-center mt-3">
                                         <h3 class="text-primary">Ethan Rylko</h3>
                                         <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Rochester Hills, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Secretary</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Computer Science and Applied Engineering Sciences</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Computer Science and Applied Engineering Sciences</div>
                                         <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2024</div>
                                     </div>
 
@@ -273,14 +254,14 @@
 			            <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/katy.PNG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Henry Xu's Photo">
+                                    <img src="assets/img/team/caley.PNG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Caley Burnock's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Katy Foss</h3>
+                                        <h3 class="text-primary">Caley Burnock</h3>
                                         <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
-                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Tecumseh, MI</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Wixom, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Media Chair</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Sophomore, Environmental Engineering</div>
-                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2025</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Sophomore, Computer Science</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2026</div>
                                     </div>
 
                                     <!-- <div class="border-top">
@@ -292,19 +273,53 @@
                         <div class="col-lg-4 mb-4">
                             <div class="card shadow border-0 h-100">
                                 <div class="card-body">
-                                    <img src="assets/img/team/josh.JPG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Tommy Erickson's Photo">
+                                    <img src="assets/img/team/jack.JPG" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Jack Sleeman's Photo">
                                     <div class="text-center mt-3">
-                                        <h3 class="text-primary">Joshua VanBynen</h3>
+                                        <h3 class="text-primary">Jack Sleeman</h3>
                                         <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
                                         <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Pinckney, MI</div>
                                         <div class="h6"><i class="fa fa-briefcase mr-2"></i>Recruitment</div>
-                                        <div class="h6"><i class="fa fa-book mr-2"></i>Sophomore, Chemical Engineering</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Senior, Computer Science</div>
                                         <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2024</div>
                                     </div>
-
+                                    
                                     <!-- <div class="border-top">
                                         <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
                                     </div> -->
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 mb-4">
+                            <div class="card shadow border-0 h-100">
+                                <div class="card-body">
+                                    <img src="assets/img/team/jordan.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Jordan Dashner's Photo">
+                                    <div class="text-center mt-3">
+                                        <h3 class="text-primary">Jordan Dashner</h3>
+                                        <div class="h6"><i class="fa fa-user-tag"></i>she/her/hers</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>South Lyon, MI</div>
+                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>Co-Caterer</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Biosystems Engineering</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2025</div>
+                                    </div>
+                                    
+                                    <!-- <div class="border-top">
+                                        <p class="description mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+                                    </div> -->
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 mb-4">
+                            <div class="card shadow border-0 h-100">
+                                <div class="card-body">
+                                    <img src="assets/img/team/garrett.jpg" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;" alt="Garrett Gambaro's Photo">
+                                    <div class="text-center mt-3">
+                                        <h3 class="text-primary">Garrett Gambaro</h3>
+                                        <div class="h6"><i class="fa fa-user-tag"></i>he/him/his</div>
+                                        <div class="h6 font-weight-300"><i class="fa fa-globe mr-2"></i>Washington TWP, MI</div>
+                                        <div class="h6"><i class="fa fa-briefcase mr-2"></i>Co-Caterer</div>
+                                        <div class="h6"><i class="fa fa-book mr-2"></i>Junior, Civil Engineering</div>
+                                        <div class="mb-4 text-success"><i class="fa fa-graduation-cap mr-2"></i>May 2025</div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
